# ChangeLog for x11-plugins/gkrellm-reminder
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-reminder/Attic/ChangeLog,v 1.14 2007/02/21 17:28:59 lack Exp $

  21 Feb 2007; Jim Ramsay <lack@gentoo.org> +metadata.xml,
  -gkrellm-reminder-0.3.5.ebuild, gkrellm-reminder-2.0.0.ebuild:
  Accepting maintainership, cleaned out old gkrellm-1 version, and updated new
  SRC_URI location

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  27 Apr 2005; Herbie Hopkins <herbs@gentoo.org>
  gkrellm-reminder-2.0.0.ebuild:
  Stable on amd64.

  10 Jul 2004; Tom Martin <slarti@gentoo.org> gkrellm-reminder-2.0.0.ebuild:
  Marked ~amd64.

  14 Mar 2004; Jason Wever <weeve@gentoo.org> gkrellm-reminder-2.0.0.ebuild:
  Stable on sparc.

  15 Jan 2004; Aron Griffis <agriffis@gentoo.org>
  gkrellm-reminder-2.0.0.ebuild:
  stable on alpha

  07 Oct 2003; Martin Holzer <mholzer@gentoo.org>
  gkrellm-reminder-0.3.5.ebuild:
  changed depend to old gkrellm-1. Closes #25364.

*gkrellm-reminder-2.0.0 (14 Dec 2002)

  14 Dec 2002; Seemant Kulleen <seemant@gentoo.org>
  gkrellm-reminder-2.0.0.ebuild files/digest-gkrellm-reminder-2.0.0 :

  Version for GKrellM2

*gkrellm-reminder-0.3.5 (14 Apr 2002)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
  11 Sep 2002; Owen Stampflee <owen@gentoo.org> :
  Added PPC to KEYWORDS.

  29 Aug 2002; Seemant Kulleen <seemant@gentoo.org> * :

  Relocated to x11-plugins

  14 Apr 2002; Seemant Kulleen <seemant@gentoo.org> 
  gkrellm-reminder-0.3.5.ebuild files/digest-gkrellm-reminder-0.3.5 :

  Version bump submitted in bug #663 by mr.big@pc-trouble.de (Jens Blaesche)

*gkrellm-reminder-0.3.1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is