@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/gkrellm-reminder
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-reminder/Attic/ChangeLog,v 1.14 2007/02/21 17:28:59 lack Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-reminder/Attic/ChangeLog,v 1.15 2007/03/12 14:30:06 lack Exp $
+
+  12 Mar 2007; Jim Ramsay <lack@gentoo.org> gkrellm-reminder-2.0.0.ebuild:
+  Updated to use new gkrellm-plugin eclass
 
   21 Feb 2007; Jim Ramsay <lack@gentoo.org> +metadata.xml,
   -gkrellm-reminder-0.3.5.ebuild, gkrellm-reminder-2.0.0.ebuild:
